add fix to sendQuestion affix && add copy to question view

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,7 @@ block content
 					p.step-number 3
 				div.hidden-xs.hidden-sm.steps-line
 			div.learn-more
-				a.btn.btn-info(href="//google.com") Conoce más sobre cómo funciona esta web 
+				a.btn.btn-info(href="/como-funciona") Conoce más sobre cómo funciona esta web 
 					i.fa.fa-arrow-right
 		hr
 		div.part.part-3.more-info-holder
