--- a/views/layout.jade
+++ b/views/layout.jade
@@ -65,17 +65,17 @@ html(lang="en")
 	block scripts
 	script(src="/scripts/bundle.js",type="text/javascript")
 
-	//- script(type='text/javascript').
-	//- 	var _paq = _paq || [];
-	//- 	_paq.push(['trackPageView']);
-	//- 	_paq.push(['enableLinkTracking']);
-	//- 	(function() {
-	//- 	var u="//hiperderecho.org/piwik/";
-	//- 	_paq.push(['setTrackerUrl', u+'piwik.php']);
-	//- 	_paq.push(['setSiteId', 5]);
-	//- 	var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-	//- 	g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-	//- 	})();
-	//- noscript
-	//- 	p
-	//- 		img(src='//hiperderecho.org/piwik/piwik.php?idsite=5', style='border:0;', alt='')
+	script(type='text/javascript').
+		var _paq = _paq || [];
+		_paq.push(['trackPageView']);
+		_paq.push(['enableLinkTracking']);
+		(function() {
+		var u="//hiperderecho.org/piwik/";
+		_paq.push(['setTrackerUrl', u+'piwik.php']);
+		_paq.push(['setSiteId', 5]);
+		var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+		g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+		})();
+	noscript
+		p
+			img(src='//hiperderecho.org/piwik/piwik.php?idsite=5', style='border:0;', alt='')
