Fixing typos and adding extra information to FAQ

--- a/views/howItWorks.jade
+++ b/views/howItWorks.jade
@@ -10,7 +10,7 @@ block content
 				:markdown-it(html='true')
 					# ¿Cómo funciona?
 
-					Pidela.info es una plataforma web que te permite hacer solicitudes de acceso a la información pública a través de Internet.
+					Pidela.info es una plataforma web que te permite enviar Solicitudes de Acceso a la Información Pública a través de Internet.
 
 					<iframe title="YouTube video player" width="100%" height="390" src="https://www.youtube.com/embed/_iZxwwn3K0I" frameborder="0" allowfullscreen></iframe>
 
@@ -24,19 +24,19 @@ block content
 
 					Una **Solicitud de Acceso a la Información Pública** es un trámite que sirve para pedirle a una entidad del Estado copia de cualquier documento, fotografía, base de datos, grabación o archivo creado, obtenido o actualmente en su poder. Cualquier ciudadano tiene derecho a realizar este tipo de solicitudes en ejercicio de su libertad de información y el Estado está obligado a responderlas en cumplimiento con su deber de Transparencia.
 
-					Toda información que posea el Estado se presume pública, salvo las excepciones previstas por ley expresamente (ej. información personal de ciudadanos, información de inteligencia, entre otras).
+					Toda información que posea el Estado se presume pública, salvo las excepciones previstas por ley expresamente (ej. información personal de ciudadanos, información de inteligencia, entre otras).
 
 					### ¿Qué tipo de información se puede solicitar?
 
-					Puede solicitarse cualquier información que esté en posesión de una entidad pública, como la copia de un expediente técnico de una obra, o que haya sido generada por la misma entidad, como informes de obras, fotografías, videos de reuniones o bases de datos.
+					Puede solicitarse cualquier información que se encuentre en posesión de una entidad pública, como la copia de un expediente técnico de una obra, o que haya sido generada por la misma entidad, como informes de obras, fotografías, videos de reuniones o bases de datos.
 
 					### ¿Qué tipo de información no se puede solicitar?
 
-					No puede solicitarse información que no existe, tampoco puede pedirse la elaboración de un nuevo informe, la emisión de algún tipo de declaración sobre un hecho, la realización de un descargo frente al cuestionamiento de un ciudadano sobre el proceder de un funcionario, o realizarse consultas particulares a funcionarios. Tampoco puede solicitarse a la Entidad «crear» o «producir» información, o a realizar «evaluaciones» o «análisis» de información que esté bajo su control
+					No puede solicitarse información que no existe, tampoco puede pedirse la elaboración de un nuevo informe, la emisión de algún tipo de declaración sobre un hecho, solicitar una opinión o la realización de un descargo frente al cuestionamiento de un ciudadano sobre el proceder de un funcionario, o realizarse consultas particulares a funcionarios. Tampoco puede solicitarse a la Entidad «crear» o «producir» información, o a realizar «evaluaciones» o «análisis» de información que esté bajo su control.
 
 					### ¿Quién puede enviar estas Solicitudes?
 
-					Toda persona natural o jurídica tiene derecho a solicitar y a recibir información pública de cualquier entidad pública. La entrega de la información no puede ser nagada por motivos de edad, raza, religión, idioma, opinión política, nacionalidad o cualquier otra razón.
+					Toda persona natural o jurídica tiene derecho a solicitar y a recibir información pública de cualquier entidad pública. La entrega de la información no puede ser nagada por motivos de edad, raza, religión, idioma, opinión política, nacionalidad o cualquier otra razón.
 
 					### ¿Es necesario explicar para qué se solicita la información?
 
@@ -44,19 +44,19 @@ block content
 
 					### ¿A quién puedo pedirle información?
 
-					Puede solicitarse información a cualquier entidad de la Administración Pública:
+					Puede solicitarse información a cualquier entidad de la Administración Pública. Según la Ley, esta categoría incluye:
 
-					1. Poder Ejecutivo, incluyendo Ministerios y Organismos Públicos Descentralizados
+					1. Poder Ejecutivo, incluyendo Ministerios y Organismos Públicos Descentralizados
 					2. Poder Legislativo
 					3. Poder Judicial
 					4. Gobiernos Regionales
 					5. Gobiernos Locales
-					6. Organismos a los que la Constitución Política del Perú y las leyes con eren autonomía (Tribunal Constitucional, el Consejo Nacional de la Magistratura, el Jurado Nacional de Elecciones, la Contraloría General de la República, el Banco Central de Reserva del Perú, la Defensoría del Pueblo, el Registro Nacional de Identi cación y Estado Civil, la Ofcina Nacional de Procesos Electorales, los colegios profesionales (institución con personalidad de derecho público), las universidad públicas, entre otras.)
-					7. Las demás entidades y organismos, proyectos y programas del Estado cuyas actividades se realizan en virtud de potestades administrativas y, por tanto se consideran sujetas a las normas comunes de derecho público, salvo mandato expreso de ley que las re era a otro régimen (ej. Juntos, Pronaa, Pronabec, Cajas Municipales, entre otras.)
+					6. Organismos a los que la Constitución Política del Perú y las leyes confieren autonomía (Tribunal Constitucional, el Consejo Nacional de la Magistratura, el Jurado Nacional de Elecciones, la Contraloría General de la República, el Banco Central de Reserva del Perú, la Defensoría del Pueblo, el Registro Nacional de Identificación y Estado Civil, la Oficina Nacional de Procesos Electorales, los colegios profesionales, las universidad públicas, entre otras.)
+					7. Las demás entidades y organismos, proyectos y programas del Estado cuyas actividades se realizan en virtud de potestades administrativas y, por tanto se consideran sujetas a las normas comunes de derecho público, salvo mandato expreso de ley que las refiera a otro régimen (ej. Juntos, Pronaa, Pronabec, Cajas Municipales, entre otras.)
 
 					### ¿Cómo se puede presentar una Solicitud de Acceso a la Información Pública?
 
-					Según la Ley de Transparencia, las Solicitudes pueden presentarse de manera escrita (en la propia entidad, a través de los formularios disponibles) o de manera digital (mediante el formulario electrónico o correo electrónico que la entidad haya habilitado para ello.)
+					Según la Ley de Transparencia, las Solicitudes pueden presentarse de manera escrita (en la propia entidad, a través de los formularios disponibles) o de manera digital (mediante el formulario electrónico o correo electrónico que la entidad haya habilitado para ello.)
 
 					### ¿Cuánto cuesta?
 
@@ -64,7 +64,11 @@ block content
 
 					### ¿Existe algún plazo para que la Entidad responda la Solicitud?
 
-					Las entidades tienen con un plazo de hasta siete (7) días hábiles, contados desde el día siguiente de la recepción de la solicitud para entregar la información pública o denegarla. Excepcionalmente, este plazo puede ampliarse por hasta cinco (5) días hábiles adicionales cuando medien circunstancias que hagan inusualmente difícil reunir la información solicitada.
+					Las entidades tienen con un plazo de hasta siete (7) días hábiles, contados desde el día siguiente de la recepción de la solicitud para entregar la información pública o denegarla. Excepcionalmente, este plazo puede ampliarse por hasta cinco (5) días hábiles adicionales cuando medien circunstancias que hagan inusualmente difícil reunir la información solicitada.
+
+					### ¿Qué pasa si la Entidad nunca responde la Solicitud o la rechaza?
+
+					La negativa injustificada de una Entidad a una Solicitud de Acceso a la Información Pública o su no respuesta son base para iniciar un Proceso de Hábeas Data ante el Poder Judicial. 
 
 					## Sobre Pidela.info
 
@@ -86,7 +90,7 @@ block content
 
 					### Trabajo en una entidad pública y quiero participar de la plataforma.
 
-					Pidela.info es una plataforma abierta a la incorporación de nuevas entidades participantes. La participación en esta plataforma no tiene ningún costo para las entidades públicas. Escríbenos a hola (arroba) hiperderecho (punto) org y cuéntanos dónde trabajas.
+					Pidela.info es una plataforma abierta a la incorporación de nuevas entidades participantes. La participación en esta plataforma no tiene ningún costo para las entidades públicas. Escríbenos a **hola (arroba) hiperderecho (punto) org** o usa **[nuestro formulario de contacto](http://www.hiperderecho.org/contacto/)** y estaremos encantados de conversar contigo y tus colegas.
 			div.col-md-4.visible-lg-block
 				div.copy-menu.js-copy-menu
 					ul
