--- a/views/sendQuestion.jade
+++ b/views/sendQuestion.jade
@@ -36,7 +36,7 @@ block content
 						input#ctaFormAddress.form-control(type='text',placeholder='Le enviaremos esta información a la entidad pero no la publicaremos aquí.',name='address')
 					div.form-group
 						label(for='ctaFormAuthor') Correo electrónico 
-							span.form-instruction (nunca lo usaremos para publicidad)
+							span.form-instruction (nunca lo usaremos para enviarte publicidad)
 						input#ctaFormAuthor.form-control(type='email',placeholder='Por este medio te contactaremos cuando tu Solicitud sea contestada.',name='author')
 					div.form-group
 						label(for='ctaFormTitle') Sumilla 
@@ -53,13 +53,14 @@ block content
 							span.js-char-count.pull-right
 							span.form-instruction (mínimo 40 carácteres, máximo 800)
 							textarea#ctaFormContent.form-control(rows='10',placeholder='Lista la información que quieres solicitar.',name='content')
+							p
 							p Además, preciso que la información solicitada debe de enviarse en formato electrónico mediante mensaje de correo electróncio dirigido a la dirección de origen de este mensaje. Por lo señalado, de acuerdo con el artículo 12 del Reglamento, la respuesta a este pedido no tiene ningún costo.
 							p Atentamente,
 					div.form-group
 						label Haz clic en la casilla de verificación 
 						div.g-recaptcha(data-sitekey='6Ldi_hMTAAAAACr5PBZqAPIWJvN7X4D7mb4HsC4l')
 					div.form-group
-						p.collapse.js-cta-form-error-message No hemos podido enviar tu Solicitud. Asegúrate que todos los campos están llenos.
+						p.collapse.js-cta-form-error-message No hemos podido enviar tu Solicitud. Asegúrate que has completado todos los campos y no has excedido la extensión máximo de caracteres.
 						p.collapse.js-cta-form-success-message Tu solicitud fue enviada
 					button.btn.btn-info(type='submit') Enviar
 			div.col-md-6.info-holder
@@ -69,14 +70,13 @@ block content
 
 						Escribe tu solicitud usando un lenguaje sencillo y comprensible. Puedes [mirar otras solicitudes realizadas](/solicitudes-enviadas) para hacerte una mejor idea de cómo escribirla.
 
-
 						#### ¿Qué información puedo solicitar?
 
 						Una **Solicitud de Acceso a la Información Pública** sirve para pedirle a una entidad del Estado copia de cualquier documento, fotografía, base de datos, grabación o archivo creado, obtenido o actualmente en su poder.
 
 						#### ¿Qué información no puedo solicitar?
 
-						No puedes pedir nada que la entidad ningún documento o información que la entidad no tenga o no haya producido hasta ahora. Tampoco puedes pedir información clasificada como secreta, reservada o confidencial. Puedes conocer más sobre estas excepciones en nuestra [Guía para el Solicitante](/como-funciona). Obviamente, no puedes pedir a través de esta plataforma nada que la Entidad no puede enviarte por correo electrónico.
+						No puedes hacer preguntas genéricas ni pedir nada que la entidad ningún documento o información que la entidad no tenga o no haya producido hasta ahora. Tampoco puedes pedir información clasificada como secreta, reservada o confidencial. Puedes conocer más sobre estas excepciones en nuestra [Guía para el Solicitante](/como-funciona). Obviamente, no puedes pedir a través de esta plataforma nada que la Entidad no puede enviarte por correo electrónico.
 
 						Asegúrate que la información que solicitas no esté disponible ya en la página web de la Entidad.
 		hr
