Fixing typos on form

--- a/views/sendQuestion.jade
+++ b/views/sendQuestion.jade
@@ -76,7 +76,7 @@ block content
 
 						#### ¿Qué información no puedo solicitar?
 
-						No puedes hacer preguntas genéricas ni pedir nada que la entidad ningún documento o información que la entidad no tenga o no haya producido hasta ahora. Tampoco puedes pedir información clasificada como secreta, reservada o confidencial. Puedes conocer más sobre estas excepciones en nuestra [Guía para el Solicitante](/como-funciona). Obviamente, no puedes pedir a través de esta plataforma nada que la Entidad no puede enviarte por correo electrónico.
+						No puedes hacer preguntas genéricas ni pedir ningún documento o información que la entidad no tenga o no haya producido hasta ahora. Tampoco puedes pedir información clasificada como secreta, reservada o confidencial. Puedes conocer más sobre estas excepciones en nuestra [Guía para el Solicitante](/como-funciona). Obviamente, no puedes pedir a través de esta plataforma nada que la Entidad no puede enviarte por correo electrónico.
 
 						Asegúrate que la información que solicitas no esté disponible ya en la página web de la Entidad.
 		hr
