add alert styles to ctaForm messages

--- a/views/sendQuestion.jade
+++ b/views/sendQuestion.jade
@@ -60,8 +60,8 @@ block content
 						label Haz clic en la casilla de verificación 
 						div.g-recaptcha(data-sitekey='6Ldi_hMTAAAAACr5PBZqAPIWJvN7X4D7mb4HsC4l')
 					div.form-group
-						p.collapse.js-cta-form-error-message No hemos podido enviar tu Solicitud. Asegúrate que has completado todos los campos y no has excedido la extensión máximo de caracteres.
-						p.collapse.js-cta-form-success-message Tu solicitud fue enviada
+						p.alert.alert-danger.collapse.js-cta-form-error-message No hemos podido enviar tu Solicitud. Asegúrate que has completado todos los campos y no has excedido la extensión máximo de caracteres.
+						p.alert.alert-success.collapse.js-cta-form-success-message Tu solicitud fue enviada
 					button.btn.btn-info(type='submit') Enviar
 			div.col-md-6.info-holder
 				div.visible-lg-block.extra-info-holder.js-extra-info-holder
