change padding on index list of agencies

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -194,6 +194,7 @@ body {
 }
 .index-holder .part-3 .agencies {
 	list-style-type: none;
+	padding: 0;
 }
 .index-holder .part-3 .question a:hover h4 {
 	text-decoration: underline;
