--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,8 @@ html(lang="en")
 								a(href="/") Inicio
 							li.navbar-section.navbar-browse-questions
 								a(href="/solicitudes-enviadas") Solicitudes
+							li.navbar-section.navbar-agencies
+								a(href="/entidades") Entidades
 							li.navbar-section.navbar-send-question
 								a(href="/nueva-solicitud") Envía una solicitud
 						ul.nav.navbar-nav.navbar-right
